--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.foody"
+    >
+
     <application
         android:label="foody"
         android:name="${applicationName}"
@@ -31,3 +34,7 @@
             android:value="2" />
     </application>
 </manifest>
+
+
+
+
