--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: '>=3.2.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,23 +35,24 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  sqflite: ^2.2.5
-  intl: ^0.18.0
-  bloc: ^8.1.1
-  flutter_bloc: ^8.1.2
-  dio: ^5.1.2
-  shared_preferences: ^2.1.1
-  image_picker: ^0.8.7
-  curved_navigation_bar: ^1.0.3
-  carousel_slider: ^4.2.1
-  smooth_page_indicator: ^1.1.0
+#  cupertino_icons: ^1.0.2
+  sqflite: ^2.3.3+1
+  intl: ^0.19.0
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  dio: ^5.5.0+1
+  shared_preferences: ^2.2.3
+  image_picker: ^1.1.2
+#  curved_navigation_bar: ^1.0.3
+#  carousel_slider: ^4.2.1
+#  smooth_page_indicator: ^1.1.0
   flutter_swiper_null_safety: ^1.0.2
-  flutter_otp_text_field: ^1.1.1
-  pinput: ^2.2.31
-  flutter_rating_bar: ^4.0.1
-  device_info_plus: ^8.1.0
-
+  flutter_otp_text_field: ^1.1.3+2
+  pinput: ^5.0.0
+#  flutter_rating_bar: ^4.0.1
+  device_info_plus: ^10.1.0
+  firebase_core: ^3.3.0
+  firebase_messaging: ^15.0.4
 
 
 #  google_maps_flutter: ^2.2.5
