--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   device_info_plus: ^10.1.0
   firebase_core: ^3.3.0
   firebase_messaging: ^15.0.4
-
+  flutter_local_notifications: ^17.2.2
 
 #  google_maps_flutter: ^2.2.5
 
